--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,59 +1,150 @@
 
 body {
-
-        background-color: black;
-}
-
-.text {
+        background-color: black !important;
         margin-left: auto;                     
         margin-right: auto;
-}
+        width: 780px;
+}  
 
 .geek {
-		    background-color : red;
         width: 70%;
         max-width: 388px;
+        margin-top: 10px;
         display: inline-block;
 }
 
 .lab {
-		    background-color : blue;
         width: 43.16%; 
         max-width: 243px;
+        margin-left: 30px; 
         display: inline-block;
+        
 }
 
 .tlacitko {
-        width: 24.72%; 
-        max-width: 137px;
-        display: inline-block;
+        width: 13.32%;
+        margin-left: auto;                     
+        margin-right: auto; 
+        max-width: 74px;
+        display: block;
 }
 
+
+.SliderG {
+	width: 63%;
+  max-width: 300px;
+  margin-top: 10px;
+  display: inline-block;  
+}  
+
+.SliderL {
+	width: 100%;
+  max-width: 300px;
+  margin-top: 10px;
+  display: inline-block; 
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    height: 4px;
+    max-width: 300px;
+    border: none;
+ 	  border-radius: 4px;
+    margin-top: 7px;    
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #0099FF;
+    border: none; 
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    opacity: 0.8;
+}
+
+input[type=range]:focus{
+    outline: none;
+}
+
+input[type=range]:hover{
+    background: #B2E0FF;
+}
+ 
+ 
+ 
+   
 @media (max-width: 768px) {
 
+  body {
+        margin-left: auto;                     
+        margin-right: auto;
+        width: auto;
+  }  
+  
   .geek {
-    margin-left: auto;                     
-    margin-right: auto;
-    display: block !important;
+      margin-left: auto;                     
+      margin-right: auto;          
+      display: block !important;
   }
   
   .lab {
-    margin-left: auto;                     
-    margin-right: auto;
-    display: block !important;
+      margin-left: auto;                     
+      margin-right: auto;          
+      display: block !important;
   }
 
-    .tlacitko {
-    margin-left: auto;                     
-    margin-right: auto;
-    display: block !important;
+  .tlacitko {
+      margin-left: auto;                     
+      margin-right: auto;          
+      display: block !important;
   }
+  
+.SliderG {
+      margin-left: auto;                     
+      margin-right: auto;          
+      display: block !important;
+}
+
+.SliderL {
+      margin-left: auto;                     
+      margin-right: auto;          
+      display: block !important;  
+}
   
 }
 
 img {
-   display : block; 
+   display : block !important;
    width:100%;
+}
+
+figure {
+	text-align: center;
+}
+
+#barvaGR {
+	background-color: red;
+}
+
+#barvaGG {
+	background-color: green;
+}
+
+#barvaGB {
+	background-color: blue;
+}
+
+#barvaLR {
+	background-color: red;
+}
+
+#barvaLG {
+	background-color: green;
+}
+
+#barvaLB {
+	background-color: blue;
 }
 
 
