--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4,21 +4,6 @@ body {
         margin-left: auto;                     
         margin-right: auto;
         width: 780px;
-}  
-
-.geek {
-        width: 70%;
-        max-width: 388px;
-        margin-top: 10px;
-        display: inline-block;
-}
-
-.lab {
-        width: 43.16%; 
-        max-width: 243px;
-        margin-left: 30px; 
-        display: inline-block;
-        
 }
 
 .tlacitko {
@@ -34,14 +19,27 @@ body {
 	width: 63%;
   max-width: 300px;
   margin-top: 10px;
-  display: inline-block;  
+	display: inline-block;  
 }  
 
 .SliderL {
 	width: 100%;
   max-width: 300px;
-  margin-top: 10px;
-  display: inline-block; 
+  margin-top: 10px; 
+  display: inline-block;
+}
+
+.geekObal {
+	display: inline-block;
+	width: 70%;
+    max-width: 388px;
+    margin-top: 10px;
+}
+
+.labObal {
+	display: inline-block;
+    width: 43.16%; 
+    max-width: 243px;
 }
 
 input[type=range] {
@@ -82,13 +80,14 @@ input[type=range]:hover{
         width: auto;
   }  
   
-  .geek {
+  .geekObal {
       margin-left: auto;                     
       margin-right: auto;          
       display: block !important;
   }
   
-  .lab {
+  .labObal {
+	  margin-top: 20px;
       margin-left: auto;                     
       margin-right: auto;          
       display: block !important;
