--- a/web/css/main.css
+++ b/web/css/main.css
@@ -105,3 +105,7 @@ body{
       border: 10px solid rgba(52, 187, 238,0.5);	
       box-shadow: 0px 0px 2px 0px #34BBEE !important; 
     }
+
+    .ui-slider input {  /* pruhlednost textu u input */
+      opacity: 0.65; 
+    }
